# cognitive_workspace

./: .eslintrc.js  .gitignore  .lintstagedrc  README.md  monorepo_setup_verification.ipynb  package.json  tsconfig.json  turbo.json
backend/: .flake8  Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  router.py
backend/app/api/endpoints/: auth.py  users.py  workspaces.py
backend/app/application/dtos/: project_dtos.py  user_dtos.py
backend/app/application/services/: project_service.py  user_service.py
backend/app/core/: __init__.py  config.py  deps.py
backend/app/domain/: __init__.py
backend/app/domain/agent_system/: __init__.py  entities.py  events.py  interfaces.py  services.py
backend/app/domain/artifact_management/: __init__.py  entities.py  events.py  interfaces.py  services.py
backend/app/domain/common/: __init__.py  base.py  event_publisher.py  events.py  interfaces.py  validation.py  value_objects.py
backend/app/domain/conversation_system/: __init__.py  entities.py  events.py  interfaces.py  services.py
backend/app/domain/knowledge_management/: __init__.py  entities.py  events.py  interfaces.py  services.py
backend/app/domain/project_management/: __init__.py  entities.py  events.py  interfaces.py  repositories.py  services.py  value_objects.py
backend/app/domain/user_management/: __init__.py  entities.py  events.py  repositories.py  services.py  value_objects.py
backend/app/infrastructure/persistence/: collaborator_repository.py  database.py  (+1 more)
backend/app/models/: user.py
backend/app/schemas/: user.py  workspace.py
backend/tests/: conftest.py  test_application_layer.py  test_domain_layer.py  test_infrastructure_layer.py
backend/tests/application/: test_application_layer.py
backend/tests/domain/: test_domain_layer.py
backend/tests/infrastructure/: test_infrastructure_layer.py
(+48 files in other folders)
